# ocr

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.web  Makefile  README.md  changelog_and_contributing.md  configuration_files.txt  docker-compose.yml  examples_documentation.md  index.html  install_script.sh  license_and_github_templates.txt  pdf_processor.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_files.txt  setup.py  test.py  test_ocr.py  test_various_pdfs.py  unit_tests.py  verification_script.py
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: auto-label.yml  ci.yml  welcome.yml
config/: config.yaml
docs/: README.md
docs/api-reference/: README.md  python-api.md
docs/faq/: README.md
docs/getting-started/: installation.md
docs/user-guide/: quickstart.md
documents/: Analiza Rynku Cyfrowych Bliźniaków w Czasie Rzeczy.md
logs/: verification_report.json
pdf_processor/: __init__.py  __main__.py  __version__.py  cli.py  pdf_processor.py
pdf_processor/config/: __init__.py  settings.py
pdf_processor/models/: __init__.py  ocr_result.py  retry_config.py
pdf_processor/processing/: __init__.py  image_enhancement.py  ocr_processor.py  pdf_processor.py  svg_generator.py
pdf_processor/processing/ocr/: __init__.py  models.py  ollama_client.py
pdf_processor/processing/svg/: __init__.py  base_generator.py  multipage_generator.py  page_generator.py
pdf_processor/processing/svg/elements/: __init__.py  image.py  navigation.py  text.py
pdf_processor/processing/svg/utils/: __init__.py  style_utils.py  svg_utils.py
pdf_processor/utils/: __init__.py  file_utils.py  logging_utils.py  validation_utils.py
scripts/: README.md  clean.sh  dev-server.sh  dev-setup.sh  docker-build.sh  docker-run.sh  docker-stop.sh  docs-serve.sh  docs.sh  format.sh  install-dev.sh  install.sh  lint.sh  models.sh  publish.sh  release-upload.sh  release.sh  test-cov.sh  test.sh  verify.sh
tests/: __init__.py  conftest.py  unit_tests.py
tests/unit/: test_pdf_processor.py
